# Chatroom

./: .gitignore  CMakeLists.txt  README.md  client_run.sh  menu2.cpp  server.cpp  server.h  server_run.sh  widget.cpp
client/core/: widget.cpp  widget.ui
client/include/: msgtype.h  widget.h
client/ui/: menu2.ui
common/: mysocket.cpp
